--- a/src/scss/Products/_all-products.scss
+++ b/src/scss/Products/_all-products.scss
@@ -1,4 +1,38 @@
+@import '../common';
+
 .all-products {
   margin-top: 50px;
-  padding: 15px;
+}
+
+.el-row {
+  margin: 5px 0px;
+  background: rgba(238,238,238, 0.6);
+}
+
+.product-information {
+  overflow: auto;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.buttons > button {
+  padding: 10px 5px;
+  border-radius: 5px;
+  outline: none;
+  box-shadow: none;
+  color: $primaryFontColor;
+  font-weight: bold;
+  background: $primaryBgColor;
+  border: 1px solid #263238;
+}
+
+.buttons > button:disabled {
+  cursor: not-allowed;
 }
