--- a/src/scss/Products/_user-products.scss
+++ b/src/scss/Products/_user-products.scss
@@ -1,19 +1,27 @@
+.el-col {
+  margin-top: 10px;
+}
+
 .bottom {
-  margin-top: 13px;
-  line-height: 12px;
+  height: 150px;
+  overflow: auto;
 }
 
 .image {
   width: 100%;
+  height: 250px;
   display: block;
 }
 
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: "";
+.product-description {
+  height: 100%;
 }
 
-.clearfix:after {
-  clear: both
+.product-name {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.button-area {
+  text-align: center;
 }
