added search product by product name

--- a/src/scss/Products/_user-products.scss
+++ b/src/scss/Products/_user-products.scss
@@ -25,3 +25,14 @@
 .button-area {
   text-align: center;
 }
+
+.search-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 20px 0px;
+}
+
+.search-input {
+  width: 30vw;
+}
