--- a/src/scss/Auctions/_main.scss
+++ b/src/scss/Auctions/_main.scss
@@ -46,3 +46,38 @@
 .el-carousel__item:nth-child(2n+1) {
   background-color: #d3dce6;
 }
+
+.avatar-uploader .el-upload {
+  border: 1px dashed #d9d9d9;
+  border-radius: 6px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.avatar-uploader .el-upload:hover {
+  border-color: #409EFF;
+}
+.avatar-uploader-icon {
+  font-size: 28px;
+  color: #8c939d;
+  width: 178px;
+  height: 178px;
+  line-height: 178px;
+  text-align: center;
+}
+.avatar {
+  width: 178px;
+  height: 178px;
+  display: block;
+}
+
+.upload-text {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.file-upload {
+  padding: 25px 0px;
+  text-align: center;
+}
